--- a/public-offer.html
+++ b/public-offer.html
@@ -136,7 +136,7 @@
                   fill="black" />
                 <path
                   d="M14.72 19.1C13.9581 18.0535 12.5134 17.8383 11.5 18.625C10.4866 19.4117 10.2781 20.9035 11.04 21.95L13.7784 25.7203C14.1234 26.1953 14.0731 26.8559 13.6706 27.2715L12.7506 28.2215C12.2691 28.7187 11.4856 28.6816 11.0544 28.1398L4.6 20.1391V9.125C4.6 7.81133 3.57219 6.75 2.3 6.75C1.02781 6.75 0 7.81133 0 9.125V25.3344C0 26.1434 0.265937 26.9301 0.754687 27.5609L8.23687 37.5285C8.59625 38.0109 8.84062 38.5602 8.98437 39.1391C9.11375 39.6512 9.56656 40 10.0841 40H19.55C20.1825 40 20.7 39.4656 20.7 38.8125V30.5C20.7 28.4441 20.0531 26.4477 18.86 24.8L14.72 19.1ZM43.7 6.75C42.4278 6.75 41.4 7.81133 41.4 9.125V20.1391L34.9456 28.1398C34.5144 28.6742 33.7237 28.7113 33.2494 28.2215L32.3294 27.2715C31.9269 26.8559 31.8766 26.1953 32.2216 25.7203L34.96 21.95C35.7219 20.9035 35.5134 19.4117 34.5 18.625C33.4866 17.8383 32.0419 18.0535 31.28 19.1L27.14 24.8C25.9469 26.4477 25.3 28.4441 25.3 30.5V38.8125C25.3 39.4656 25.8175 40 26.45 40H35.9159C36.4263 40 36.8862 39.6512 37.0156 39.1391C37.1594 38.5602 37.4038 38.0109 37.7631 37.5285L45.2453 27.5609C45.7341 26.9301 46 26.1434 46 25.3344V9.125C46 7.81133 44.9722 6.75 43.7 6.75Z"
-                  fill="#567DC2" />
+                  fill="$BTN-Blue" />
                 <path
                   d="M22.5001 15.5125C22.408 15.5122 22.3186 15.4814 22.2459 15.425C19.9292 13.625 18.3334 12.075 17.2167 10.5458C15.7917 8.59162 15.4667 6.78745 16.2501 5.18329C16.8084 4.03745 18.4126 3.09995 20.2876 3.64579C21.1815 3.90401 21.9615 4.45778 22.5001 5.21662C23.0386 4.45778 23.8186 3.90401 24.7126 3.64579C26.5834 3.10829 28.1917 4.03745 28.7501 5.18329C29.5334 6.78745 29.2084 8.59162 27.7834 10.5458C26.6667 12.075 25.0709 13.625 22.7542 15.425C22.6815 15.4814 22.5921 15.5122 22.5001 15.5125ZM19.2209 4.32495C18.7748 4.30759 18.3323 4.41206 17.941 4.62714C17.5498 4.84222 17.2245 5.1598 17.0001 5.54579C16.3542 6.87079 16.6459 8.34579 17.8917 10.05C19.2157 11.7577 20.7661 13.2773 22.5001 14.5667C24.2338 13.2785 25.7841 11.7604 27.1084 10.0542C28.3584 8.34579 28.6459 6.87079 28.0001 5.54995C27.5834 4.71662 26.3334 4.05412 24.9417 4.44579C24.4955 4.57766 24.0818 4.8015 23.7273 5.1029C23.3728 5.4043 23.0853 5.77658 22.8834 6.19579C22.852 6.27221 22.7986 6.33757 22.73 6.38357C22.6614 6.42957 22.5806 6.45413 22.498 6.45413C22.4154 6.45413 22.3346 6.42957 22.266 6.38357C22.1974 6.33757 22.144 6.27221 22.1126 6.19579C21.9121 5.77553 21.6252 5.40238 21.2704 5.1008C20.9157 4.79921 20.5013 4.576 20.0542 4.44579C19.7834 4.36712 19.5029 4.32646 19.2209 4.32495Z"
                   fill="#FFD708" />
@@ -237,8 +237,8 @@
   <main>
 
     <section class="public-offer container">
-      <h1 class="public-offer__title">Публічна Оферта</h1>
 
+      <h1 class="public-offer__title">Публічна Оферта</h1>
 
       <ul class="public-offer-list container">
         <li class="public-offer-list-item">
@@ -246,11 +246,11 @@
             адресована
             невизначеному колу фізичних та
             юридичних осіб – відвідувачів веб-сайту БЛАГОДІЙНОЇ ОРГАНІЗАЦІЇ «БЛАГОДІЙНИЙ ФОНД «АВТО АНГЕЛ ЛЬВІВ» (БО БФ
-            «АВТО АНГЕЛ ЛЬВІВ» в мережі Інтернет https://autoangel.org.ua (далі – Сайт), і є офіційною і публічною
+            «АВТО АНГЕЛ ЛЬВІВ» в мережі Інтернет <a class="public-offer-link"
+              href="https://autoangel.org.ua">https://autoangel.org.ua</a> (далі – Сайт), і є офіційною і публічною
             пропозицією БО БФ «АВТО АНГЕЛ ЛЬВІВ» (ідентифікаційний код 44878259) (далі – Організація) в особі директора
             ОГІНКА Андрія Володимировича, що діє на підставі Статуту, укласти договір про благодійну пожертву (далі –
             Договір), предмет та істотні умови якого вказані нижче:</p>
-
         </li>
         <li class="public-offer-list-item">
           <h2>1.Терміни та визначення:</h2>
@@ -344,14 +344,14 @@
           </span>
         </li>
         <li class="public-offer-list-item">
-          <h2>9.Відповідальність Організації.</h2>
+          <h2>8.Відповідальність Організації.</h2>
           <span class="pawn">
             Відповідальність Організації за порушення цього Договору або порядку використання благодійних пожертв
             наступає на підставах, в розмірі та в порядку, визначених вимогами чинного законодавства України.
           </span>
         </li>
         <li class="public-offer-list-item">
-          <h2>10.Звітність про використання благодійних пожертв.</h2>
+          <h2>9.Звітність про використання благодійних пожертв.</h2>
           <span class="pawn">
             Доступ до звітів про використання благодійних пожертв надається Організацією у порядку і в строки,
             передбачені чинним законодавством України. Організація може оприлюднювати звітність про використання
@@ -359,6 +359,7 @@
           </span>
         </li>
         <li class="public-offer-list-item">
+          <h2>10.Прикінцеві положення.</h2>
           <ol class="sub-list-number">
             <li>Всі витрати по сплаті сум (комісій, зборів, податків тощо), пов’язаних з перерахуванням і зарахуванням
               благодійної пожертви, несе Благодійник.</li>
