add page about-us

--- a/public-offer.html
+++ b/public-offer.html
@@ -93,11 +93,12 @@
 
       <nav class="nav">
         <a class="nav__link" href="./index.html">Головна</a>
-        <a class="nav__link" href="">Я Українка</a>
+        <a class="nav__link" href="./im-Ukranian.html">Я Українка</a>
         <a class="nav__link" href="./blog.html">Блог</a>
-        <a class="nav__link" href="">Контакти</a>
-        <a class="nav__link" href="">Про нас</a>
-        <a class="nav__link" href="">Автобіографія</a>
+        <a class="nav__link" href="./contacts.html">Контакти</a>
+        <a class="nav__link" href="./about-us.html">Про нас</a>
+        <a class="nav__link" href="./autobiography.html">Автобіографія</a>
+        <a class="nav__link" href="./public-offer.html">Публічна офферта</a>
       </nav>
 
       <div class="lang">
@@ -150,22 +151,25 @@
 
       <ul class="nav-menu-list">
         <li class="nav-menu-list-item">
-          <a class="nav-menu-list-item__link" href="#home">Головна </a>
+          <a class="nav-menu-list-item__link" href="./index.html">Головна </a>
         </li>
         <li class="nav-menu-list-item">
-          <a class="nav-menu-list-item__link" href="#">Я Українка</a>
+          <a class="nav-menu-list-item__link" href="./im-Ukranian.html">Я Українка</a>
         </li>
         <li class="nav-menu-list-item">
-          <a class="nav-menu-list-item__link" href="#">Блог</a>
+          <a class="nav-menu-list-item__link" href="./blog.html">Блог</a>
         </li>
         <li class="nav-menu-list-item">
-          <a class="nav-menu-list-item__link" href="#">Контакти</a>
+          <a class="nav-menu-list-item__link" href="./contacts.html">Контакти</a>
         </li>
         <li class="nav-menu-list-item">
-          <a class="nav-menu-list-item__link" href="#">Про нас</a>
+          <a class="nav-menu-list-item__link" href="./about-us.html">Про нас</a>
         </li>
         <li class="nav-menu-list-item">
-          <a class="nav-menu-list-item__link" href="#">Автобіографія</a>
+          <a class="nav-menu-list-item__link" href="./autobiography.html">Автобіографія</a>
+        </li>
+        <li class="nav-menu-list-item">
+          <a class="nav-menu-list-item__link" href="./public-offer.html">Публічна офферта</a>
         </li>
       </ul>
 
