--- a/blog.html
+++ b/blog.html
@@ -90,11 +90,12 @@
 
       <nav class="nav">
         <a class="nav__link" href="./index.html">Головна</a>
-        <a class="nav__link" href="">Я Українка</a>
+        <a class="nav__link" href="./im-Ukranian.html">Я Українка</a>
         <a class="nav__link" href="./blog.html">Блог</a>
-        <a class="nav__link" href="">Контакти</a>
-        <a class="nav__link" href="">Про нас</a>
-        <a class="nav__link" href="">Автобіографія</a>
+        <a class="nav__link" href="./contacts.html">Контакти</a>
+        <a class="nav__link" href="./about-us.html">Про нас</a>
+        <a class="nav__link" href="./autobiography.html">Автобіографія</a>
+        <a class="nav__link" href="./public-offer.html">Публічна офферта</a>
       </nav>
 
       <div class="lang">
@@ -147,22 +148,25 @@
 
       <ul class="nav-menu-list">
         <li class="nav-menu-list-item">
-          <a class="nav-menu-list-item__link" href="#home">Головна </a>
+          <a class="nav-menu-list-item__link" href="./index.html">Головна </a>
         </li>
         <li class="nav-menu-list-item">
-          <a class="nav-menu-list-item__link" href="#">Я Українка</a>
+          <a class="nav-menu-list-item__link" href="./im-Ukranian.html">Я Українка</a>
         </li>
         <li class="nav-menu-list-item">
-          <a class="nav-menu-list-item__link" href="#">Блог</a>
+          <a class="nav-menu-list-item__link" href="./blog.html">Блог</a>
         </li>
         <li class="nav-menu-list-item">
-          <a class="nav-menu-list-item__link" href="#">Контакти</a>
+          <a class="nav-menu-list-item__link" href="./contacts.html">Контакти</a>
         </li>
         <li class="nav-menu-list-item">
-          <a class="nav-menu-list-item__link" href="#">Про нас</a>
+          <a class="nav-menu-list-item__link" href="./about-us.html">Про нас</a>
         </li>
         <li class="nav-menu-list-item">
-          <a class="nav-menu-list-item__link" href="#">Автобіографія</a>
+          <a class="nav-menu-list-item__link" href="./autobiography.html">Автобіографія</a>
+        </li>
+        <li class="nav-menu-list-item">
+          <a class="nav-menu-list-item__link" href="./public-offer.html">Публічна офферта</a>
         </li>
       </ul>
 
@@ -394,27 +398,28 @@
 
         <ul class="materials-list">
           <li class="materials-list-item">
+            <a class="materials-list-link" href="">
+              <img src="./src/img/materials.jpg" alt="">
 
-            <img src="./src/img/materials.jpg" alt="">
+              <div class="materials-list-item__wrap">
+                <h3 class="materials-list-item__title">
+                  Поїздка на Запоріжжя: поїздка для підтримки наших військових
+                </h3>
 
-            <div class="materials-list-item__wrap">
-              <h3 class="materials-list-item__title">
-                Поїздка на Запоріжжя: поїздка для підтримки наших військових
-              </h3>
+                <p class="materials-list-item__descr">
+                  Безумовно, допомога військовим - це критичний аспект підтримки та визнання важливості служби, яку вони
+                  надають для захисту країни та її мешканців. Часто громадські організації відіграють ключову роль у
+                  наданні
+                  підтримки військовим, які повертаються з військової служби або переживають труднощі під час служби.
+                </p>
 
-              <p class="materials-list-item__descr">
-                Безумовно, допомога військовим - це критичний аспект підтримки та визнання важливості служби, яку вони
-                надають для захисту країни та її мешканців. Часто громадські організації відіграють ключову роль у
-                наданні
-                підтримки військовим, які повертаються з військової служби або переживають труднощі під час служби.
-              </p>
-
-              <div class="data-wrap">
-                <div class="data">
-                  06 листопада 2023, 13:44
+                <div class="data-wrap">
+                  <div class="data">
+                    06 листопада 2023, 13:44
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
           </li>
           <li class="materials-list-item">
 
@@ -672,7 +677,8 @@
         </ul>
 
         <ul class="pagination">
-          <svg xmlns="http://www.w3.org/2000/svg" class="icon-left" width="24" height="24" viewBox="0 0 24 24" fill="none">
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon-left" width="24" height="24" viewBox="0 0 24 24"
+            fill="none">
             <path d="M14 7L9 12L14 17" stroke="#080808" stroke-linecap="round" stroke-linejoin="round" />
           </svg>
           <li class="pagination-item pagination-item-first">
@@ -687,7 +693,8 @@
           <li class="pagination-item">
             <a class="pagination-item__link" href="">4</a>
           </li>
-          <svg xmlns="http://www.w3.org/2000/svg" class="icon-right" width="24" height="24" viewBox="0 0 24 24" fill="none">
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon-right" width="24" height="24" viewBox="0 0 24 24"
+            fill="none">
             <path d="M10 17L15 12L10 7" stroke="#080808" stroke-linecap="round" stroke-linejoin="round" />
           </svg>
         </ul>
