add page blo-project

--- a/blog-project.html
+++ b/blog-project.html
@@ -14,7 +14,7 @@
 
   <link rel="stylesheet" href="./src/styles/hamburgers.css">
   <link rel="stylesheet" href="./dist/main.css">
-  <title>Blog</title>
+  <title>Blog-project</title>
 </head>
 
 <body>
@@ -231,223 +231,46 @@
         <a class="breadcrumbs-link" href="./index.html">Головна</a>
         <div class="breadcrumbs-wrap__seperator">\</div>
         <a class="breadcrumbs-link" href="./blog.html">Блог</a>
+        <div class="breadcrumbs-wrap__seperator">\</div>
+        <a class="breadcrumbs-link" href="./blog-project.html">Поїздка на Запоріжжя</a>
       </div>
     </div>
   </div>
 
   <main>
-    <section class="blog">
+    <section class="blog-project">
       <div class="container">
-        <h2 class="blog__title">Блог</h2>
-        <div class="blog-wrap">
-          <h2 class="blog-wrap__title">Наші проєкти</h2>
-          <p class="blog-wrap__descr">Ми працюємо над багатьма проєктами. На цій сторінці ви детального можете
-            ознайомитись з кожним з них.</p>
+        <h1 class="blog-project__title">Поїздка на Запоріжжя: поїздка для підтримки наших військових </h1>
+        <div class="data-wrap">
+          <div class="data">
+            06 листопада 2023, 13:44
+          </div>
         </div>
 
-        <div class="blog-projects">
+        <ul class="blog-project-list">
+          <li class="blog-project-list-item">
+            <img src="./src/img/blog-project.jpg" alt="">
 
-          <div class="blog-projects-card">
-            <a class="blog-projects-card-link" href="">
-              <img src="./src/img/blog-1.jpg" alt="">
-            </a>
-            <div class="blog-card-wrap">
-              <a class="blog-projects-card-link" href="">
-                <h3 class="blog-card-wrap__title">
-                  Проєкт “Українське сонце”
-                </h3>
-              </a>
+            <div class="blog-project-list-item__wrap">
 
-              <ul class="blog-list">
-                <li class="blog-list__item">Українська народна культура, народні і сучасні пісні;</li>
-                <li class="blog-list__item">танці, музика, художнє читання;</li>
-                <li class="blog-list__item">майстер класи народних ремесел від жінок;</li>
-                <li class="blog-list__item">та інші культурні проекти.</li>
-              </ul>
-            </div>
-          </div>
-
-          <div class="blog-projects-card">
-            <a class="blog-projects-card-link" href="">
-              <img src="./src/img/blog-2.jpg" alt="">
-            </a>
-            <div class="blog-card-wrap">
-              <a class="blog-projects-card-link" href="">
-                <h3 class="blog-card-wrap__title">
-                  Допомога народу України
-                </h3>
-              </a>
-
-              <ul class="blog-list">
-                <li class="blog-list__item">допомога юриста;</li>
-                <li class="blog-list__item">допомога з реабілітації поранених:</li>
-                <li class="blog-list__item">допомога по господарству;</li>
-                <li class="blog-list__item">психологічна допомога та інші;</li>
-                <li class="blog-list__item">допомога дітям;</li>
-                <li class="blog-list__item">допомога переселенцям.</li>
-              </ul>
-            </div>
-          </div>
-
-          <div class="blog-projects-card">
-            <img src="./src/img/blog-3.jpg" alt="">
-            <div class="blog-card-wrap">
-              <h3 class="blog-card-wrap__title">
-                Мова – це наша зброя!
-              </h3>
-
-              <ul class="blog-list">
-                <li class="blog-list__item">патріотичний проект “Я Українка”</li>
-                <li class="blog-list__item">знайомство з лідерами та відомими особистостями;</li>
-                <li class="blog-list__item">літературні читання.</li>
-              </ul>
-            </div>
-          </div>
-
-          <div class="blog-projects-card">
-            <img src="./src/img/blog-4.jpg" alt="">
-            <div class="blog-card-wrap">
-              <h3 class="blog-card-wrap__title">
-                Духовне багацтво
-              </h3>
-
-              <ul class="blog-list">
-                <li class="blog-list__item">Божественість;</li>
-                <li class="blog-list__item">Духовність, любов до життя;</li>
-                <li class="blog-list__item">Голос Бога – може врятувати кожного.</li>
-              </ul>
+              <p class="blog-project-list-item__descr">
+                Безумовно, допомога військовим - це критичний аспект підтримки та визнання важливості служби, яку вони
+                надають для захисту країни та її мешканців. Часто громадські організації відіграють ключову роль у
+                наданні підтримки військовим, які повертаються з військової служби або переживають труднощі під час
+                служби.
+              </p>
 
             </div>
-          </div>
-
-          <div class="blog-projects-card">
-            <img src="./src/img/blog-5.jpg" alt="">
-            <div class="blog-card-wrap">
-              <h3 class="blog-card-wrap__title">
-                “Українське сонце”
-              </h3>
-
-              <ul class="blog-list">
-                <li class="blog-list__item">робота з дітьми та підлітками від 3 років і до 14 років;</li>
-                <li class="blog-list__item">навчання першої медичної допомоги;</li>
-                <li class="blog-list__item">патріотичний рух для молоді та інші заходи.</li>
-              </ul>
-
-            </div>
-          </div>
-
-          <div class="blog-projects-card">
-            <img src="./src/img/blog-6.jpg" alt="">
-            <div class="blog-card-wrap">
-              <h3 class="blog-card-wrap__title">
-                Народний Рух України
-              </h3>
-
-              <ul class="blog-list">
-                <li class="blog-list__item">Політичний Рух Україні</li>
-                <li class="blog-list__item">Україна починається з тебе;</li>
-                <li class="blog-list__item">Ми Українці – вільні люди;</li>
-                <li class="blog-list__item">Все Буде Україна!</li>
-              </ul>
-
-            </div>
-          </div>
-
-          <div class="blog-projects-card">
-            <img src="./src/img/blog-7.jpg" alt="">
-            <div class="blog-card-wrap">
-              <h3 class="blog-card-wrap__title">
-                “Бойове братерство України”
-              </h3>
-
-              <ul class="blog-list">
-                <li class="blog-list__item">Всеукраїнська спілка воїнів, безпосередніх учасників російсько-української
-                  війни: бойових офіцерів, солдатів, добровольців, волонтерів і капеланів, які мають прагнення та честь
-                  бути відданими Україні та служити інтересам її народу.</li>
-                <li class="blog-list__item">З нами Бог і Україна</li>
-                <li class="blog-list__item">Вольності, можливості і заможності</li>
-              </ul>
-
-            </div>
-          </div>
-
-          <div class="blog-projects-card">
-            <img src="./src/img/blog-8.jpg" alt="">
-            <div class="blog-card-wrap">
-              <h3 class="blog-card-wrap__title">
-                Санаторій “Райдуга”
-              </h3>
-
-              <ul class="blog-list">
-                <li class="blog-list__item">Реабілітація хворих опорно-рухового апарату</li>
-                <li class="blog-list__item">Відпочинково-оздоровчий комплекс</li>
-                <li class="blog-list__item">сторінка санаторію</li>
-              </ul>
-
-            </div>
-          </div>
-
-        </div>
-
+          </li>
+        </ul>
       </div>
     </section>
 
-    <section class="materials">
+    <!-- <section class="comments">
       <div class="container">
-        <h2 class="materials__title">Матеріали</h2>
-
-        <ul class="materials-list">
-          <li class="materials-list-item">
-            <a class="materials-list-link" href="./blog-project.html">
-              <img src="./src/img/materials.jpg" alt="">
-
-              <div class="materials-list-item__wrap">
-                <h3 class="materials-list-item__title">
-                  Поїздка на Запоріжжя: поїздка для підтримки наших військових
-                </h3>
-
-                <p class="materials-list-item__descr">
-                  Безумовно, допомога військовим - це критичний аспект підтримки та визнання важливості служби, яку вони
-                  надають для захисту країни та її мешканців. Часто громадські організації відіграють ключову роль у
-                  наданні
-                  підтримки військовим, які повертаються з військової служби або переживають труднощі під час служби.
-                </p>
-
-                <div class="data-wrap">
-                  <div class="data">
-                    06 листопада 2023, 13:44
-                  </div>
-                </div>
-              </div>
-            </a>
-          </li>
-        </ul>
-
-        <ul class="pagination">
-          <svg xmlns="http://www.w3.org/2000/svg" class="icon-left" width="24" height="24" viewBox="0 0 24 24"
-            fill="none">
-            <path d="M14 7L9 12L14 17" stroke="#080808" stroke-linecap="round" stroke-linejoin="round" />
-          </svg>
-          <li class="pagination-item pagination-item-first">
-            <a class="pagination-item__link" href="">1</a>
-          </li>
-          <li class="pagination-item">
-            <a class="pagination-item__link" href="">2</a>
-          </li>
-          <li class="pagination-item">
-            <a class="pagination-item__link" href="">3</a>
-          </li>
-          <li class="pagination-item">
-            <a class="pagination-item__link" href="">4</a>
-          </li>
-          <svg xmlns="http://www.w3.org/2000/svg" class="icon-right" width="24" height="24" viewBox="0 0 24 24"
-            fill="none">
-            <path d="M10 17L15 12L10 7" stroke="#080808" stroke-linecap="round" stroke-linejoin="round" />
-          </svg>
-        </ul>
+        <h1 class="comments__title">Коментарі</h1>
       </div>
-
-    </section>
+    </section> -->
 
   </main>
 
